--- a/camel-website/src/components/style_swiper.css
+++ b/camel-website/src/components/style_swiper.css
@@ -9,8 +9,8 @@
 }
 
 .swiper {
-  width: 320px;
-  height: 500px;
+  width: 250px;
+  height: 350px;
 }
 
 .swiper-slide {
@@ -26,7 +26,7 @@
 .swiper-horizontal>.swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal {
   bottom: var(--swiper-pagination-bottom, auto);
-  top: var(--swiper-pagination-top, 31.5rem);
+  top: var(--swiper-pagination-top, 21.8rem);
   left: 0;
   width: 100%;
 }
@@ -42,4 +42,45 @@
 .card:hover {
   backdrop-filter: blur(12px);
   border-radius: 20px;
+}
+
+@media (min-width: 640px) {
+  .swiper {
+    width: 320px;
+    height: 500px;
+  }
+
+  .swiper-horizontal>.swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal {
+    top: var(--swiper-pagination-top, 31.5rem);
+
+  }
+}
+
+
+@media (min-width: 1024px) {
+  .swiper {
+    width: 270px;
+    height: 370px;
+  }
+
+  .swiper-horizontal>.swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal {
+    top: var(--swiper-pagination-top, 23.5rem);
+
+  }
+}
+
+
+@media (min-width: 1440px) {
+  .swiper {
+    width: 320px;
+    height: 500px;
+  }
+
+  .swiper-horizontal>.swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal {
+    top: var(--swiper-pagination-top, 31.5rem);
+
+  }
 }
