multiples sections are done

--- a/camel-website/src/App.css
+++ b/camel-website/src/App.css
@@ -32,7 +32,38 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e1251a;
+  border-radius: 5px;
+
+}
+
+
+/* svg animation for transparent photo colors */
+@keyframes draw {
+  from {
+    stroke-dasharray: 0, 1000;
+  }
+
+  to {
+    stroke-dasharray: 1000, 0;
+  }
+}
+
+.draw-animation {
+  animation: draw 2s forwards;
 }
