--- a/camel-website/src/components/Theme.css
+++ b/camel-website/src/components/Theme.css
@@ -1,16 +1,19 @@
 :root {
   --accent-color: #e1251a; /* Default accent color */
   --highlight-color: #f43a3a77; /* Default highlight color */
-  --bg-color: #fff; /* Default background color */
+  --bg-color: #FFFAF4; /* Default background color */
   --text-color: #000; /* Default text color */
   --background2: #fff3e4; /* Light background for sidebar */
 
   /* Hover colors */
   --hover-accent: #f43a3a; /* Accent color for hover */
+
+  /* Conic gradients */
+  --conic-gradient: conic-gradient(from 225deg, #e1251a, #f43a3a77, #121212, #f43a3a77, #e1251a, #121212);
 }
 
 .light-mode {
-  --bg-color: #fff;
+  --bg-color: #FFFAF4;
   --text-color: #000;
   --background2: #fff3e4; /* Light background for sidebar */
 }
@@ -23,11 +26,30 @@
 
 .bg-accent {
   background-color: var(--accent-color);
-  color: #fff; /* Text color */
+  color: #FFFAF4; /* Text color */
+}
+
+
+/*for inner circle of banner*/
+.bg-accent2 {
+  color: var(--accent-color); /* Text color */
+}
+
+.bg-highlight {
+  background-color: var(--highlight-color);
+  
+}
+
+.bg-conic-gradient{
+  color: var(--conic-gradient);
 }
 
 .border-accent {
   border-color: var(--accent-color);
+}
+
+.border-l-accent {
+  border-left-color: var(--accent-color);
 }
 
 .text-accent {
@@ -39,7 +61,7 @@
 }
 
 .hover-accent:hover {
-  background-color: #fff; /* Background color on hover */
+  background-color: #fff3e4; /* Background color on hover */
   color: var(--accent-color); /* Text color on hover */
 }
 
@@ -51,6 +73,7 @@
   background-color: var(--accent-color);
   color: var(--bg-color);
 }
+
 
 body {
   background-color: var(--bg-color);
@@ -68,7 +91,7 @@ body {
     height: 25px;
     border-radius: 50%; /* Use border-radius to create circles */
     margin: 2px 10px;
-    border: 1px solid #fff;
+    border: 1px solid #FFFAF4;
     display: inline-block;
     opacity: 1;
 
@@ -110,34 +133,55 @@ body {
 .theme-white {
   --accent-color: #e1251a;
   --highlight-color: #f43a3a77;
+
+  /* Conic gradient for theme-white */
+  --conic-gradient: conic-gradient(from 225deg, #e1251a, #f43a3a77, #121212, #f43a3a77, #e1251a, #121212);
 }
 
 .theme-pink {
   --accent-color: #FF5C8E;
-  --highlight-color: #FF88A8;
+  --highlight-color: #f8c6d3;
+
+  /* Conic gradient for theme-pink */
+  --conic-gradient: conic-gradient(from 225deg, #FF5C8E, #f8c6d3, #121212, #f8c6d3, #FF5C8E, #121212);
 }
 
 .theme-blue {
   --accent-color: #1A97F5;
-  --highlight-color: #3FAFF8;
+  --highlight-color: #d6eaf7;
+
+  /* Conic gradient for theme-blue */
+  --conic-gradient: conic-gradient(from 225deg, #1A97F5, #d6eaf7, #121212, #d6eaf7, #1A97F5, #121212);
 }
 
 .theme-orange {
   --accent-color: #FB9678;
-  --highlight-color: #FCB08D;
+  --highlight-color: #fcd3c0;
+
+  /* Conic gradient for theme-orange */
+  --conic-gradient: conic-gradient(from 225deg, #FB9678, #fcd3c0, #121212, #fcd3c0, #FB9678, #121212);
 }
 
 .theme-purple {
   --accent-color: #7352FF;
-  --highlight-color: #9577FF;
+  --highlight-color: #d3caf6;
+
+  /* Conic gradient for theme-purple */
+  --conic-gradient: conic-gradient(from 225deg, #7352FF, #d3caf6, #121212, #d3caf6, #7352FF, #121212);
 }
 
 .theme-green {
   --accent-color: #03C9D7;
-  --highlight-color: #2FD7DF;
+  --highlight-color: #abedf1;
+
+  /* Conic gradient for theme-green */
+  --conic-gradient: conic-gradient(from 225deg, #03C9D7, #abedf1, #121212, #abedf1, #03C9D7, #121212);
 }
 
 .theme-indigo {
   --accent-color: #1E4DB7;
-  --highlight-color: #406DC4;
+  --highlight-color: #d1dcf0;
+
+  /* Conic gradient for theme-indigo */
+  --conic-gradient: conic-gradient(from 225deg, #1E4DB7, #d1dcf0, #121212, #d1dcf0, #1E4DB7, #121212);
 }
