--- a/camel-website/src/components/ExploreArtistsGallery.css
+++ b/camel-website/src/components/ExploreArtistsGallery.css
@@ -47,41 +47,66 @@
   animation: move9 25s linear infinite;
 }
 
-/* .animation1 {
-  animation: move1 38s linear infinite;
+.animation10 {
+  animation: move10 25s linear infinite;
 }
 
-.animation2 {
-  animation: move2 40s linear infinite;
+
+/* big */
+@keyframes move2 {
+  0% {
+    top: 0%;
+    left: 33%;
+  }
+
+  25% {
+    top: 35%;
+    left: 33%;
+  }
+
+  50% {
+    top: 78%;
+    left: 33%;
+  }
+
+  75% {
+    top: 35%;
+    left: 33%;
+  }
+
+  100% {
+    top: 0%;
+    left: 33%;
+  }
 }
 
-.animation3 {
-  animation: move3 30s linear infinite;
-}
+/* big */
+@keyframes move8 {
+  0% {
+    top: 78%;
+    left: 33%;
+  }
 
-.animation4 {
-  animation: move4 36s linear infinite;
-}
+  25% {
+    top: 35%;
+    left: 33%;
+  }
 
-.animation5 {
-  animation: move5 32s linear infinite;
-}
+  50% {
+    top: 0%;
+    left: 33%;
+  }
 
-.animation6 {
-  animation: move6 27s linear infinite;
-}
+  75% {
+    top: 35%;
+    left: 33%;
+  }
 
-.animation7 {
-  animation: move7 25s linear infinite;
+  100% {
+    top: 78%;
+    left: 33%;
+  }
 }
-
-.animation8 {
-  animation: move8 40s linear infinite;
-}
-
-.animation9 {
-  animation: move9 42s linear infinite;
-} */
 
 @keyframes move1 {
   0% {
@@ -91,66 +116,38 @@
 
   25% {
     top: 0%;
-    left: 80%;
+    left: 77%;
   }
 
   50% {
-    top: 70%;
-    left: 80%;
+    top: 90%;
+    left: 77%;
   }
 
   75% {
-    top: 70%;
+    top: 90%;
     left: 10%;
   }
 
   100% {
     top: 0%;
     left: 10%;
-  }
-}
-
-/* big */
-@keyframes move2 {
-  0% {
-    top: 30%;
-    left: 50%;
-  }
-
-  25% {
-    top: 30%;
-    left: 70%;
-  }
-
-  50% {
-    top: 30%;
-    left: 50%;
-  }
-
-  75% {
-    top: 30%;
-    left: 10%;
-  }
-
-  100% {
-    top: 30%;
-    left: 50%;
   }
 }
 
 @keyframes move3 {
   0% {
     top: 0%;
-    left: 80%;
+    left: 77%;
   }
 
   25% {
-    top: 70%;
-    left: 80%;
+    top: 90%;
+    left: 77%;
   }
 
   50% {
-    top: 70%;
+    top: 90%;
     left: 10%;
   }
 
@@ -161,18 +158,18 @@
 
   100% {
     top: 0%;
-    left: 80%;
+    left: 77%;
   }
 }
 
 @keyframes move4 {
   0% {
-    top: 70%;
-    left: 80%;
+    top: 90%;
+    left: 77%;
   }
 
   25% {
-    top: 70%;
+    top: 90%;
     left: 10%;
   }
 
@@ -183,18 +180,18 @@
 
   75% {
     top: 0%;
-    left: 80%;
+    left: 77%;
   }
 
   100% {
-    top: 70%;
-    left: 80%;
+    top: 90%;
+    left: 77%;
   }
 }
 
 @keyframes move5 {
   0% {
-    top: 70%;
+    top: 90%;
     left: 10%;
   }
 
@@ -205,359 +202,679 @@
 
   50% {
     top: 0%;
-    left: 80%;
+    left: 77%;
   }
 
   75% {
-    top: 70%;
-    left: 80%;
+    top: 90%;
+    left: 77%;
   }
 
   100% {
-    top: 70%;
+    top: 90%;
     left: 10%;
   }
 }
 
 @keyframes move6 {
   0% {
-    top: 0%;
-    left: 20%;
-  }
-
-  25% {
-    top: 0%;
-    left: 70%;
-  }
-
-  50% {
-    top: 70%;
-    left: 70%;
-  }
-
-  75% {
-    top: 70%;
-    left: 20%;
-  }
-
-  100% {
-    top: 0%;
-    left: 20%;
-  }
-}
-
-@keyframes move7 {
-  0% {
-    top: 0%;
-    left: 70%;
-  }
-
-  25% {
-    top: 70%;
-    left: 70%;
-  }
-
-  50% {
-    top: 70%;
-    left: 20%;
-  }
-
-  75% {
-    top: 0%;
-    left: 20%;
-  }
-
-  100% {
-    top: 0%;
-    left: 70%;
-  }
-}
-
-/* big */
-@keyframes move8 {
-  0% {
-    top: 30%;
-    left: 50%;
-  }
-
-  25% {
-    top: 30%;
-    left: 10%;
-  }
-
-  50% {
-    top: 30%;
-    left: 50%;
-  }
-
-  75% {
-    top: 30%;
-    left: 70%;
-  }
-
-  100% {
-    top: 30%;
-    left: 50%;
-  }
-}
-
-@keyframes move9 {
-  0% {
-    top: 70%;
-    left: 70%;
-  }
-
-  25% {
-    top: 70%;
-    left: 20%;
-  }
-
-  50% {
-    top: 0%;
-    left: 20%;
-  }
-
-  75% {
-    top: 0%;
-    left: 70%;
-  }
-
-  100% {
-    top: 70%;
-    left: 70%;
-  }
-}
-
-
-/* @keyframes move1 {
-  0% {
-    top: 0%;
-    left: 10%;
-  }
-
-  25% {
-    top: 0%;
-    left: 80%;
-  }
-
-  50% {
-    top: 65%;
-    left: 80%;
-  }
-
-  75% {
-    top: 65%;
-    left: 10%;
-  }
-
-  100% {
-    top: 0%;
-    left: 10%;
-  }
-}
-
-@keyframes move2 {
-  0% {
-    top: 30%;
-    left: 50%;
-  }
-
-  25% {
-    top: 30%;
-    left: 70%;
-  }
-
-  50% {
-    top: 30%;
-    left: 50%;
-  }
-
-  75% {
-    top: 30%;
-    left: 10%;
-  }
-
-  100% {
-    top: 30%;
-    left: 50%;
-  }
-}
-
-@keyframes move3 {
-  0% {
-    top: 0%;
-    left: 20%;
-  }
-
-  25% {
-    top: 0%;
-    left: 70%;
-  }
-
-  50% {
-    top: 70%;
-    left: 70%;
-  }
-
-  75% {
-    top: 70%;
-    left: 20%;
-  }
-
-  100% {
-    top: 0%;
-    left: 20%;
-  }
-}
-
-@keyframes move4 {
-  0% {
-    top: 0%;
-    left: 80%;
-  }
-
-  25% {
-    top: 40%;
-    left: 80%;
-  }
-
-  50% {
-    top: 40%;
-    left: 10%;
-  }
-
-  75% {
-    top: 70%;
-    left: 10%;
-  }
-  100% {
-    top: 0%;
-    left: 80%;
-  }
-}
-
-@keyframes move5 {
-  0% {
-    top: 3%;
-    left: 65%;
-  }
-
-  25% {
-    top: 3%;
-    left: 30%;
-  }
-
-  50% {
-    top: 83%;
-    left: 30%;
-  }
-
-  75% {
-    top: 83%;
-    left: 65%;
-  }
-
-  100% {
-    top: 3%;
-    left: 65%;
-  }
-}
-
-@keyframes move6 {
-  0% {
     top: 10%;
-    left: 80%;
+    left: 25%;
   }
 
   25% {
-    top: 70%;
-    left: 10%;
+    top: 10%;
+    left: 62%;
   }
 
   50% {
-    top: 10%;
-    left: 10%;
-  }
-
-  75% {
-    top: 70%;
-    left: 80%;
-  }
-
-  100% {
-    top: 10%;
-    left: 80%;
-  }
-}
-
-@keyframes move7 {
-  0% {
-    top: 81%;
-    left: 10%;
-  }
-
-  33% {
-    top: 0%;
-    left: 45%;
-  }
-
-  66% {
-    top: 81%;
-    left: 80%;
-  }
-
-  100% {
-    top: 81%;
-    left: 10%;
-  }
-}
-
-@keyframes move8 {
-  0% {
-    top: 30%;
-    left: 50%;
-  }
-
-  25% {
-    top: 30%;
-    left: 10%;
-  }
-
-  50% {
-    top: 30%;
-    left: 50%;
-  }
-
-  75% {
-    top: 30%;
-    left: 70%;
-  }
-
-  100% {
-    top: 30%;
-    left: 50%;
-  }
-}
-
-@keyframes move9 {
-  0% {
-    top: 10%;
-    left: 10%;
-  }
-
-  33% {
-    top: 10%;
-    left: 80%;
-  }
-
-  66% {
     top: 80%;
-    left: 45%;
+    left: 62%;
   }
 
+  75% {
+    top: 80%;
+    left: 25%;
+  }
 
   100% {
     top: 10%;
-    left: 10%;
+    left: 25%;
   }
-} */
+}
+
+@keyframes move7 {
+  0% {
+    top: 10%;
+    left: 62%;
+  }
+
+  25% {
+    top: 80%;
+    left: 62%;
+  }
+
+  50% {
+    top: 80%;
+    left: 25%;
+  }
+
+  75% {
+    top: 10%;
+    left: 25%;
+  }
+
+  100% {
+    top: 10%;
+    left: 62%;
+  }
+}
+
+@keyframes move9 {
+  0% {
+    top: 80%;
+    left: 62%;
+  }
+
+  25% {
+    top: 80%;
+    left: 25%;
+  }
+
+  50% {
+    top: 10%;
+    left: 25%;
+  }
+
+  75% {
+    top: 10%;
+    left: 62%;
+  }
+
+  100% {
+    top: 80%;
+    left: 62%;
+  }
+}
+
+@keyframes move10 {
+  0% {
+    top: 80%;
+    left: 25%;
+  }
+
+  25% {
+    top: 10%;
+    left: 25%;
+  }
+
+  50% {
+    top: 10%;
+    left: 62%;
+  }
+
+  75% {
+    top: 80%;
+    left: 62%;
+  }
+
+  100% {
+    top: 80%;
+    left: 25%;
+  }
+}
+
+@media (min-width:640px) {
+
+  /* big */
+  @keyframes move2 {
+    0% {
+      top: 33%;
+      left: 50%;
+    }
+
+    25% {
+      top: 33%;
+      left: 70%;
+    }
+
+    50% {
+      top: 33%;
+      left: 50%;
+    }
+
+    75% {
+      top: 33%;
+      left: 10%;
+    }
+
+    100% {
+      top: 33%;
+      left: 50%;
+    }
+  }
+
+  /* big */
+  @keyframes move8 {
+    0% {
+      top: 33%;
+      left: 50%;
+    }
+
+    25% {
+      top: 33%;
+      left: 10%;
+    }
+
+    50% {
+      top: 33%;
+      left: 50%;
+    }
+
+    75% {
+      top: 33%;
+      left: 70%;
+    }
+
+    100% {
+      top: 33%;
+      left: 50%;
+    }
+  }
+
+  @keyframes move1 {
+    0% {
+      top: 0%;
+      left: 10%;
+    }
+
+    25% {
+      top: 0%;
+      left: 80%;
+    }
+
+    50% {
+      top: 82%;
+      left: 80%;
+    }
+
+    75% {
+      top: 82%;
+      left: 10%;
+    }
+
+    100% {
+      top: 0%;
+      left: 10%;
+    }
+  }
+
+  @keyframes move3 {
+    0% {
+      top: 0%;
+      left: 80%;
+    }
+
+    25% {
+      top: 82%;
+      left: 80%;
+    }
+
+    50% {
+      top: 82%;
+      left: 10%;
+    }
+
+    75% {
+      top: 0%;
+      left: 10%;
+    }
+
+    100% {
+      top: 0%;
+      left: 80%;
+    }
+  }
+
+  @keyframes move4 {
+    0% {
+      top: 82%;
+      left: 80%;
+    }
+
+    25% {
+      top: 82%;
+      left: 10%;
+    }
+
+    50% {
+      top: 0%;
+      left: 10%;
+    }
+
+    75% {
+      top: 0%;
+      left: 80%;
+    }
+
+    100% {
+      top: 82%;
+      left: 80%;
+    }
+  }
+
+  @keyframes move5 {
+    0% {
+      top: 82%;
+      left: 10%;
+    }
+
+    25% {
+      top: 0%;
+      left: 10%;
+    }
+
+    50% {
+      top: 0%;
+      left: 80%;
+    }
+
+    75% {
+      top: 82%;
+      left: 80%;
+    }
+
+    100% {
+      top: 82%;
+      left: 10%;
+    }
+  }
+
+  @keyframes move6 {
+    0% {
+      top: 0%;
+      left: 20%;
+    }
+
+    25% {
+      top: 0%;
+      left: 70%;
+    }
+
+    50% {
+      top: 82%;
+      left: 70%;
+    }
+
+    75% {
+      top: 82%;
+      left: 20%;
+    }
+
+    100% {
+      top: 0%;
+      left: 20%;
+    }
+  }
+
+  @keyframes move7 {
+    0% {
+      top: 0%;
+      left: 70%;
+    }
+
+    25% {
+      top: 82%;
+      left: 70%;
+    }
+
+    50% {
+      top: 82%;
+      left: 20%;
+    }
+
+    75% {
+      top: 0%;
+      left: 20%;
+    }
+
+    100% {
+      top: 0%;
+      left: 70%;
+    }
+  }
+
+  @keyframes move9 {
+    0% {
+      top: 82%;
+      left: 70%;
+    }
+
+    25% {
+      top: 82%;
+      left: 20%;
+    }
+
+    50% {
+      top: 0%;
+      left: 20%;
+    }
+
+    75% {
+      top: 0%;
+      left: 70%;
+    }
+
+    100% {
+      top: 82%;
+      left: 70%;
+    }
+  }
+
+  @keyframes move10 {
+    0% {
+      top: 82%;
+      left: 20%;
+    }
+
+    25% {
+      top: 0%;
+      left: 20%;
+    }
+
+    50% {
+      top: 0%;
+      left: 70%;
+    }
+
+    75% {
+      top: 82%;
+      left: 70%;
+    }
+
+    100% {
+      top: 82%;
+      left: 20%;
+    }
+  }
+}
+
+/* media queries */
+
+@media (min-width:1024px) {
+
+  /* big */
+  @keyframes move2 {
+    0% {
+      top: 28%;
+      left: 50%;
+    }
+
+    25% {
+      top: 28%;
+      left: 70%;
+    }
+
+    50% {
+      top: 28%;
+      left: 50%;
+    }
+
+    75% {
+      top: 28%;
+      left: 10%;
+    }
+
+    100% {
+      top: 28%;
+      left: 50%;
+    }
+  }
+
+  /* big */
+  @keyframes move8 {
+    0% {
+      top: 28%;
+      left: 50%;
+    }
+
+    25% {
+      top: 28%;
+      left: 10%;
+    }
+
+    50% {
+      top: 28%;
+      left: 50%;
+    }
+
+    75% {
+      top: 28%;
+      left: 70%;
+    }
+
+    100% {
+      top: 28%;
+      left: 50%;
+    }
+  }
+
+}
+
+@media (min-width:1536px) {
+  @keyframes move1 {
+    0% {
+      top: 0%;
+      left: 10%;
+    }
+
+    25% {
+      top: 0%;
+      left: 80%;
+    }
+
+    50% {
+      top: 76%;
+      left: 80%;
+    }
+
+    75% {
+      top: 76%;
+      left: 10%;
+    }
+
+    100% {
+      top: 0%;
+      left: 10%;
+    }
+  }
+
+  @keyframes move3 {
+    0% {
+      top: 0%;
+      left: 80%;
+    }
+
+    25% {
+      top: 76%;
+      left: 80%;
+    }
+
+    50% {
+      top: 76%;
+      left: 10%;
+    }
+
+    75% {
+      top: 0%;
+      left: 10%;
+    }
+
+    100% {
+      top: 0%;
+      left: 80%;
+    }
+  }
+
+  @keyframes move4 {
+    0% {
+      top: 76%;
+      left: 80%;
+    }
+
+    25% {
+      top: 76%;
+      left: 10%;
+    }
+
+    50% {
+      top: 0%;
+      left: 10%;
+    }
+
+    75% {
+      top: 0%;
+      left: 80%;
+    }
+
+    100% {
+      top: 76%;
+      left: 80%;
+    }
+  }
+
+  @keyframes move5 {
+    0% {
+      top: 76%;
+      left: 10%;
+    }
+
+    25% {
+      top: 0%;
+      left: 10%;
+    }
+
+    50% {
+      top: 0%;
+      left: 80%;
+    }
+
+    75% {
+      top: 76%;
+      left: 80%;
+    }
+
+    100% {
+      top: 76%;
+      left: 10%;
+    }
+  }
+
+  @keyframes move6 {
+    0% {
+      top: 0%;
+      left: 20%;
+    }
+
+    25% {
+      top: 0%;
+      left: 70%;
+    }
+
+    50% {
+      top: 76%;
+      left: 70%;
+    }
+
+    75% {
+      top: 76%;
+      left: 20%;
+    }
+
+    100% {
+      top: 0%;
+      left: 20%;
+    }
+  }
+
+  @keyframes move7 {
+    0% {
+      top: 0%;
+      left: 70%;
+    }
+
+    25% {
+      top: 76%;
+      left: 70%;
+    }
+
+    50% {
+      top: 76%;
+      left: 20%;
+    }
+
+    75% {
+      top: 0%;
+      left: 20%;
+    }
+
+    100% {
+      top: 0%;
+      left: 70%;
+    }
+  }
+
+  @keyframes move9 {
+    0% {
+      top: 76%;
+      left: 70%;
+    }
+
+    25% {
+      top: 76%;
+      left: 20%;
+    }
+
+    50% {
+      top: 0%;
+      left: 20%;
+    }
+
+    75% {
+      top: 0%;
+      left: 70%;
+    }
+
+    100% {
+      top: 76%;
+      left: 70%;
+    }
+  }
+
+  @keyframes move10 {
+    0% {
+      top: 76%;
+      left: 20%;
+    }
+
+    25% {
+      top: 0%;
+      left: 20%;
+    }
+
+    50% {
+      top: 0%;
+      left: 70%;
+    }
+
+    75% {
+      top: 76%;
+      left: 70%;
+    }
+
+    100% {
+      top: 76%;
+      left: 20%;
+    }
+  }
+}
