recent changes updated

--- a/camel-website/src/components/Theme.css
+++ b/camel-website/src/components/Theme.css
@@ -1,4 +1,9 @@
 /* Theme-specific classes */
+:root{
+  --accent-color: #e1251a;
+  --highlight-color: #f43a3a77;
+  --bg-color: #FFFAF4;
+}
 .theme-red {
   --accent-color: #e1251a;
   --highlight-color: #f43a3a77;
