--- a/camel-website/src/components/sub-components/style/Preloader.css
+++ b/camel-website/src/components/sub-components/style/Preloader.css
@@ -25,7 +25,7 @@
 
 .wave {
   color: white;
-  font-size: 2rem;
+  /* font-size: 2rem; */
   font-weight: bold;
   animation: wave 1.5s infinite;
 }
